--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.69"
 axum = "0.6"
+directories = "4.0.1"
 sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls"] }
 tokio = { version = "1", features = ["full"] }
+toml = "0.7.2"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
