--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,15 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 axum = "0.6"
+axum-server = { version = "0.4.6", features = ["tls-rustls"] }
 clap = { version = "4", features = ["derive"] }
 directories = "4"
-figment = { version = "0.10", features = ["yaml", "env", "json"] }
+figment = { version = "0.10", features = ["yaml", "env", "json", "test"] }
 serde = { version = "1.0", features = ["serde_derive"] }
 sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls"] }
+thiserror = "1.0.39"
 tokio = { version = "1", features = ["full"] }
 toml = "0.7"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-appender = "0.2.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
