--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4", features = ["derive"] }
 directories = "4"
 figment = { version = "0.10", features = ["yaml", "env", "json", "test"] }
 serde = { version = "1.0", features = ["serde_derive"] }
+serde_json = "1"
 sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls"] }
 thiserror = "1.0.39"
 tokio = { version = "1", features = ["full"] }
